--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <img src="Mikveh EU_Coming Soon.png" alt="Coming Soon">
+  <img src="Mikveh%20EU_Coming%20Soon.png" alt="Coming Soon">
 </body>
 </html>
