--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Coming Soon</title>
+  <meta charset="UTF-8">
+  <title>Mikveh EU — Coming Soon</title>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background: #000;
+      background: linear-gradient(to bottom right, #e3f2fd, #ffffff);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
     img {
-      display: block;
-      width: 100%;
-      height: auto;
-      max-height: 100%;
+      max-width: 90%;
+      max-height: 90%;
       object-fit: contain;
-      margin: 0 auto;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.98); }
+      to   { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
 <body>
-  <img src="Mikveh%20EU_Coming%20Soon.png" alt="Coming Soon">
+  <img src="mikveh-coming-soon.png" alt="Mikveh EU Coming Soon">
 </body>
 </html>
