--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   </style>
 </head>
 <body>
-  <img src="mikveh-coming-soon.png" alt="Mikveh EU Coming Soon">
+  <img src="mikveh-coming-soonNew.png" alt="Mikveh EU Coming Soon">
 </body>
 </html>
