--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mikveh EU — Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mikveh EU – Coming Soon</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      height: 100%;
-      background: linear-gradient(to bottom right, #e3f2fd, #ffffff);
+      background-color: #eaf3f8;
+      font-family: Arial, sans-serif;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-
     img {
       max-width: 90%;
-      max-height: 90%;
-      object-fit: contain;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      animation: fadeIn 1.2s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.98); }
-      to   { opacity: 1; transform: scale(1); }
+      height: auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <img src="mikveh-coming-soon-new.png" alt="Mikveh EU Coming Soon">
+  <img src="mikveh-coming-soon-new.png" alt="Mikveh EU Coming Soon" />
 </body>
 </html>
